Quorum/Library/Tests/TypeChecker/Fail/ExpAssignTextObjBoolObj.quorum
Boolean b
b:SetValue(true)
Text t = cast(Text, b)